Fixed text alignment in the button component

--- a/src/Components/Style.module.css
+++ b/src/Components/Style.module.css
@@ -2,9 +2,5 @@
   margin: auto 0;
   display: flex;
   align-items: center;
-  justify-content: space-between;
   padding: 0 10px 0 10px;
-}
-.btn span {
-  text-align: right;
 }
